--- a/pom.xml
+++ b/pom.xml
@@ -514,6 +514,7 @@
             </goals>
             <configuration>
               <arguments>install</arguments>
+              <installDirectory>${project.build.directory}/frontend-node</installDirectory>
               <workingDirectory>src/main/webui</workingDirectory>
             </configuration>
           </execution>
@@ -524,6 +525,7 @@
             </goals>
             <configuration>
               <arguments>test</arguments>
+              <installDirectory>${project.build.directory}/frontend-node</installDirectory>
               <workingDirectory>src/main/webui</workingDirectory>
             </configuration>
           </execution>
