fix: add vscode AI rules instructions to .gitignore
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ nb-configuration.xml
 
 # Plugin directory
 /.quarkus/cli/plugins/
+
+
+#Ignore vscode AI rules
+.github\instructions\codacy.instructions.md
