--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,9 +38,9 @@ quarkus.index-dependency.startpunkt.artifact-id=startpunkt
 quarkus.log.level=INFO
 
 # CORS configuration for microservice architecture
-quarkus.http.cors=true
-quarkus.http.cors.origins=*
-quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
-quarkus.http.cors.headers=accept,authorization,content-type,x-requested-with
-quarkus.http.cors.exposed-headers=
-quarkus.http.cors.access-control-max-age=24H
+# quarkus.http.cors=true
+# quarkus.http.cors.origins=*
+# quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
+# quarkus.http.cors.headers=accept,authorization,content-type,x-requested-with
+# quarkus.http.cors.exposed-headers=
+# quarkus.http.cors.access-control-max-age=24H
