feat: enhance devcontainer setup with pre-commit, bash-completion, and OpenShift CLI completion script
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,7 +9,8 @@
     },
     "ghcr.io/devcontainers/features/docker-in-docker:2": {
       "dockerDashComposeVersion": "none"
-    }
+    },
+    "ghcr.io/devcontainers/features/github-cli:1": {}
   },
   "customizations": {
     "vscode": {
@@ -21,10 +22,24 @@
         "redhat.vscode-yaml",
         "dbaeumer.vscode-eslint",
         "esbenp.prettier-vscode",
-        "ms-kubernetes-tools.vscode-kubernetes-tools"
-      ]
+        "ms-kubernetes-tools.vscode-kubernetes-tools",
+        "GitHub.vscode-pull-request-github",
+        "eamodio.gitlens",
+        "editorconfig.editorconfig",
+        "streetsidesoftware.code-spell-checker",
+        "humao.rest-client",
+        "redhat.vscode-microprofile",
+        "shengc.vscode-checkstyle"
+      ],
+      "settings": {
+        "editor.formatOnSave": true,
+        "java.configuration.updateBuildConfiguration": "automatic",
+        "redhat.telemetry.enabled": false,
+        "xml.format.enabled": true,
+        "yaml.format.enable": true
+      }
     }
   },
-  "postCreateCommand": "./mvnw install -DskipTests && pre-commit install",
+  "postCreateCommand": "./mvnw install -DskipTests && pre-commit install && bash .devcontainer/setup-oc-completion.sh",
   "remoteUser": "vscode"
 }
