fix: update postCreateCommand to use 'dependency:go-offline' for improved dependency management
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -40,6 +40,6 @@
       }
     }
   },
-  "postCreateCommand": "./mvnw install -DskipTests && pre-commit install && bash .devcontainer/setup-oc-completion.sh",
+  "postCreateCommand": "./mvnw dependency:go-offline && pre-commit install && bash .devcontainer/setup-oc-completion.sh",
   "remoteUser": "vscode"
 }
