--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ quarkus.micrometer.export.prometheus.path=metrics
 quarkus.cache.caffeine.metrics-enabled=true
 quarkus.cache.caffeine.expire-after-write=30s
 
-quarkus.quinoa.package-manager-install.node-version=24.2.0
+quarkus.quinoa.package-manager-install.node-version=24.12.0
 quarkus.quinoa.package-manager-install.npm-version=11.3.0
 quarkus.quinoa.package-manager=npm
 quarkus.quinoa.enable-spa-routing=true
@@ -38,9 +38,9 @@ quarkus.index-dependency.startpunkt.artifact-id=startpunkt
 quarkus.log.level=INFO
 
 # CORS configuration for microservice architecture
-quarkus.http.cors=true
-quarkus.http.cors.origins=*
-quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
-quarkus.http.cors.headers=accept,authorization,content-type,x-requested-with
-quarkus.http.cors.exposed-headers=
-quarkus.http.cors.access-control-max-age=24H
+# quarkus.http.cors=true
+# quarkus.http.cors.origins=*
+# quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
+# quarkus.http.cors.headers=accept,authorization,content-type,x-requested-with
+# quarkus.http.cors.exposed-headers=
+# quarkus.http.cors.access-control-max-age=24H
